--- a/Prodandes/bin/build.xml
+++ b/Prodandes/bin/build.xml
@@ -21,7 +21,7 @@
 		<!-- Cambie esta línea según el punto en el que esté instalado JBboss -->
 		<property environment="env" />
 		<!--- <property name="jboss.home" value="${env.JBOSS_HOME}" /> -->
-		<property name="jboss.home" value="C:\Program Files\Java\jboss-4.2.2.GA (1)\jboss-4.2.2.GA" />
+		<property name="jboss.home" value="C:\Users\Admin\jboss-4.2.3.GA" />
 		
 		<!-- Definición de propiedades -->
 		<property name="server.path" value="server/default" />
