--- a/Prodandes/data/descriptores/WEB-INF/web.xml
+++ b/Prodandes/data/descriptores/WEB-INF/web.xml
@@ -72,6 +72,10 @@ Autor: Pablo Barvo - 05-Mayo-2006
   <servlet-name>CambiarEstado</servlet-name>
   <servlet-class>Prodandes.servlets.ServletCambiarEstado</servlet-class>
  </servlet>
+ <servlet>
+  <servlet-name>GenerarPedidosRes</servlet-name>
+  <servlet-class>Prodandes.servlets.ServletGenerarPedidosRes</servlet-class>
+ </servlet>
  <!-- MAPPING -->
  <servlet-mapping>
   <servlet-name>RegistrarCliente</servlet-name>
@@ -132,5 +136,9 @@ Autor: Pablo Barvo - 05-Mayo-2006
  <servlet-mapping>
   <servlet-name>CambiarEstado</servlet-name>
   <url-pattern>/servletCambiarEstado.htm</url-pattern>
+ </servlet-mapping>
+ <servlet-mapping>
+  <servlet-name>GenerarPedidosRes</servlet-name>
+  <url-pattern>/generarPedidosRes.htm</url-pattern>
  </servlet-mapping>
 </web-app>
