Commit hiperfuncional a comparacion de los de jose
Mierda RFC6

--- a/Prodandes/data/descriptores/WEB-INF/web.xml
+++ b/Prodandes/data/descriptores/WEB-INF/web.xml
@@ -77,11 +77,14 @@ Autor: Pablo Barvo - 05-Mayo-2006
   <servlet-class>Prodandes.servlets.ServletGenerarPedidosRes</servlet-class>
  </servlet>
  <servlet>
+ 	<servlet-name>darClientes</servlet-name>
+ 	<servlet-class>Prodandes.servlets.ServletDarClientesEfectivo</servlet-class>
+</servlet><servlet>
   <servlet-name>CrearPedido</servlet-name>
   <servlet-class>Prodandes.servlets.ServletCrearPedidoMaterial</servlet-class>
  </servlet>
  <!-- MAPPING -->
- <servlet-mapping>
+	<servlet-mapping>
   <servlet-name>RegistrarCliente</servlet-name>
   <url-pattern>/registrarCliente.htm</url-pattern>
  </servlet-mapping>
@@ -148,5 +151,9 @@ Autor: Pablo Barvo - 05-Mayo-2006
  <servlet-mapping>
   <servlet-name>CrearPedido</servlet-name>
   <url-pattern>/crearPedido.htm</url-pattern>
+ </servlet-mapping>
+ <servlet-mapping>
+ 	<servlet-name>darClientes</servlet-name>
+ 	<url-pattern>/darClientesPro.htm</url-pattern>
  </servlet-mapping>
 </web-app>
