--- a/Prodandes/data/descriptores/WEB-INF/web.xml
+++ b/Prodandes/data/descriptores/WEB-INF/web.xml
@@ -83,6 +83,9 @@ Autor: Pablo Barvo - 05-Mayo-2006
   <servlet-name>CrearPedido</servlet-name>
   <servlet-class>Prodandes.servlets.ServletCrearPedidoMaterial</servlet-class>
  </servlet><servlet>
+ 	<servlet-name>CancelarPedido</servlet-name>
+ 	<servlet-class>Prodandes.servlets.ServletCancelarPedido</servlet-class>
+</servlet><servlet>
  	<servlet-name>DarPedidos</servlet-name>
  	<servlet-class>Prodandes.servlets.ServletDarPedidosEfectivo</servlet-class>
 </servlet>
@@ -162,5 +165,9 @@ Autor: Pablo Barvo - 05-Mayo-2006
  <servlet-mapping>
  	<servlet-name>DarPedidos</servlet-name>
  	<url-pattern>/DarPedidos.htm</url-pattern>
+ </servlet-mapping>
+ <servlet-mapping>
+ 	<servlet-name>CancelarPedido</servlet-name>
+ 	<url-pattern>/CancelarPedido.htm</url-pattern>
  </servlet-mapping>
 </web-app>
