jesus programo atraves de mi
req 1

--- a/Prodandes/data/descriptores/WEB-INF/web.xml
+++ b/Prodandes/data/descriptores/WEB-INF/web.xml
@@ -103,9 +103,12 @@ Autor: Pablo Barvo - 05-Mayo-2006
  <servlet>
   <servlet-name>EtapaFechas</servlet-name>
   <servlet-class>Prodandes.servlets.ServletDarEtapasFechaRes</servlet-class>
- </servlet>
+ </servlet><servlet>
+ 	<servlet-name>DarLosPedidosEfectivo</servlet-name>
+ 	<servlet-class>Prodandes.servlets.ServletDarLosPedidosEfectivo</servlet-class>
+</servlet>
  <!-- MAPPING -->
- <servlet-mapping>
+	<servlet-mapping>
   <servlet-name>RegistrarCliente</servlet-name>
   <url-pattern>/registrarCliente.htm</url-pattern>
  </servlet-mapping>
@@ -191,10 +194,14 @@ Autor: Pablo Barvo - 05-Mayo-2006
  </servlet-mapping>
  <servlet-mapping>
   <servlet-name>MaterialesID</servlet-name>
-  <url-pattern>materialesId.htm</url-pattern>
+  <url-pattern>/materialesId.htm</url-pattern>
  </servlet-mapping>
  <servlet-mapping>
   <servlet-name>EtapaFechas</servlet-name>
-  <url-pattern>etapaFechas.htm</url-pattern>
+  <url-pattern>/etapaFechas.htm</url-pattern>
+ </servlet-mapping>
+ <servlet-mapping>
+ 	<servlet-name>DarLosPedidosEfectivo</servlet-name>
+ 	<url-pattern>/DarLosPedidosEfectivo.htm</url-pattern>
  </servlet-mapping>
 </web-app>
