--- a/ProdAndesLCFS/.classpath
+++ b/ProdAndesLCFS/.classpath
@@ -6,5 +6,7 @@
 	<classpathentry kind="lib" path="lib/ojdbc6.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="lib/jms.jar"/>
+	<classpathentry kind="lib" path="lib/jndi.jar"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
