--- a/ProdAndesLCFS/bin/build.xml
+++ b/ProdAndesLCFS/bin/build.xml
@@ -21,10 +21,10 @@
 		<!-- Cambie esta línea según el punto en el que esté instalado JBboss -->
 		<property environment="env" />
 		<!--- <property name="jboss.home" value="${env.JBOSS_HOME}" /> -->
-		<property name="jboss.home" value="C:\Software\jboss-4.2.2.GA" />
+		<property name="jboss.home" value="C:\Program Files\Java\jboss-as-7.1.0.Final\jboss-as-7.1.0.Final" />
 		
 		<!-- Definición de propiedades -->
-		<property name="server.path" value="server/default" />
+		<property name="server.path" value="standalone/deployments" />
 		<property name="source" value="./src" />
 		<property name="classes" value="./classes" />
 		<property name="data" value="./WebContent" />
