--- a/ProdAndesLCFS/bin/build.xml
+++ b/ProdAndesLCFS/bin/build.xml
@@ -21,7 +21,7 @@
 		<!-- Cambie esta línea según el punto en el que esté instalado JBboss -->
 		<property environment="env" />
 		<!--- <property name="jboss.home" value="${env.JBOSS_HOME}" /> -->
-		<property name="jboss.home" value="C:\Program Files\Java\jboss-as-7.1.0.Final\jboss-as-7.1.0.Final" />
+		<property name="jboss.home" value="C:\Users\Laura\Downloads\jboss-as-7.1.0.Final" />
 		
 		<!-- Definición de propiedades -->
 		<property name="server.path" value="standalone/deployments" />
