--- a/Prodandes/bin/build.xml
+++ b/Prodandes/bin/build.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 
-<project name="prodAndes" default="deploy" basedir="../">
+<project name="prodJesus" default="deploy" basedir="../">
 	<!--
 	*******************************************************
 		Generales
@@ -18,21 +18,22 @@
 	<!-- Inicialización de las propiedades:  -->
 	
 	<target name="init" description="Inicializa las propiedades">
+		<property name="build.sysclasspath" value="last"/>
 		<!-- Cambie esta línea según el punto en el que esté instalado JBboss -->
 		<property environment="env" />
 		<!--- <property name="jboss.home" value="${env.JBOSS_HOME}" /> -->
-		<property name="jboss.home" value="C:\Program Files\Java\jboss-4.2.2.GA" />
+		
+		<property name="jboss.home" value="C:\Program Files\Java\jboss-as-7.1.0.Final\jboss-as-7.1.0.Final" />
 		
 		<!-- Definición de propiedades -->
-		<property name="server.path" value="server/default" />
+		<property name="server.path" value="standalone/deployments" />
 		<property name="source" value="./src" />
 		<property name="classes" value="./classes" />
-		<property name="data" value="./data" />
-		<property name="dist" value="./dist" />
+		<property name="data" value="./data" />	
+			<property name="dist" value="./dist" />
 		<property name="lib" value="./lib" />
 		<property name="war" value="${ant.project.name}.war" />
-		<property name="web.xml" value="./data/descriptores/WEB-INF/web.xml" />
-		
+		<property name="web.xml" value="./data/descriptores/WEB-INF/web.xml" />		
 		<!-- Borra y crea los directorios nuevamente -->
 		<delete dir="${dist}" />
 		<mkdir dir="${dist}" />
