--- a/Prodandes/bin/build.xml
+++ b/Prodandes/bin/build.xml
@@ -23,7 +23,7 @@
 		<property environment="env" />
 		<!--- <property name="jboss.home" value="${env.JBOSS_HOME}" /> -->
 		
-		<property name="jboss.home" value="C:\Program Files\Java\jboss-as-7.1.0.Final\jboss-as-7.1.0.Final" />
+		<property name="jboss.home" value="C:\Users\Javier\Videos\jboss-as-7.1.1.Final\jboss-as-7.1.1.Final" />
 		
 		<!-- Definición de propiedades -->
 		<property name="server.path" value="standalone/deployments" />
